--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,9 +75,9 @@ networks:
 
 volumes:
   volumes:
-  moviecat_postgres_data:
+  sallybook_postgres_data:
     external: true
-  moviecat_redis_data:
+  sallybook_redis_data:
     external: true
   dkim_data:
     external: true
